# stark-symphony

./: Cargo.toml
simfony-cli/: Cargo.toml
simfony-cli/src/: main.rs
simfony-wallet/src/: transaction.rs
src/: fri.simf
